tests/valid/lib/lib.s
.global func
func:
  nop
  nop
  nop