tests/invalid/double_label.s
_start:
func:
  nop
  call func
  nop
func:
  nop
  